--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f5f5f5;
+            background-image: url('fondo.jpg');
             flex-direction: column;
         }
+        
         .logo-container {
             display: flex;
             flex-wrap: wrap;
@@ -161,7 +162,6 @@
             height: 80px;
         }
 
-         /* Animación para el latido del corazón en una imagen SVG */
          .corazon-image {
             animation: example6 1.5s infinite;
         }
@@ -237,15 +237,52 @@
                 background-color: rgb(6, 90, 193); /* Rojo */
             }
         }
+
+        /* Logo propio */
+        .logo-Propio {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 100px;
+            height: auto;
+            animation: example9 10s ;
+
+        }
+
         h1{
             font-family: 'Courier New', Courier, monospace;
             font-size: 65px; 
         }
-
-
+       /* Animación como si explotase */
+       @keyframes example9 {
+            0% {
+                opacity: 1;
+                transform: scale(0.5);
+            }
+            20% {
+                opacity: 1;
+                transform: scale(1.2);
+            }40% {
+                opacity: 1;
+                transform: scale(0.5);
+            }60% {
+                opacity: 1;
+                transform: scale(1.2);
+            }80% {
+                opacity: 1;
+                transform: scale(0.5);
+            }
+            100% {
+                opacity: 0.1;
+                transform: scale(5.0);
+            }
+        }
     </style>
 </head>
 <body> 
+
+    <!-- Logo creado inskcape-->
+    <img src="logoPropio.svg" alt="Logo Propio" class="logo-Propio" width="50%" height="50%">
 
     <div class="inline-container">
         <h1>I</h1>    
